<!--

    Copyright the State of the Netherlands

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU Affero General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU Affero General Public License for more details.

    You should have received a copy of the GNU Affero General Public License
    along with this program.  If not, see http://www.gnu.org/licenses/.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>nl.aerius</groupId>
  <artifactId>webdocument-exporter</artifactId>
  <version>1.1.0-SNAPSHOT</version>

  <name>webdocument-exporter</name>

  <organization>
    <name>State of the Netherlands</name>
    <url>https://www.government.nl</url>
  </organization>

  <licenses>
    <license>
      <name>GNU Affero General Public License</name>
      <url>http://www.gnu.org/licenses/agpl-3.0.txt</url>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:ssh://git@github.com/aerius/webdocument-exporter.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/aerius/webdocument-exporter.git</developerConnection>
    <url>https://www.github.com/aerius/webdocument-exporter</url>
    <tag>HEAD</tag>
  </scm>

  <distributionManagement>
    <repository>
      <id>aerius-nexus</id>
      <url>https://nexus.aerius.nl/repository/maven-releases/</url>
    </repository>
    <snapshotRepository>
      <id>aerius-nexus</id>
      <url>https://nexus.aerius.nl/repository/maven-snapshots/</url>
    </snapshotRepository>
  </distributionManagement>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <karate.intuit.version>0.9.5</karate.intuit.version>
    <itext.version>7.0.4</itext.version>

    <aerius-tools.version>1.1.1</aerius-tools.version>
    <spotless.version>2.5.0</spotless.version>
    <jacoco.version>0.8.6</jacoco.version>
    <sonar.projectKey>aerius_webdocument-exporter</sonar.projectKey>
    <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
    <sonar.organization>aerius</sonar.organization>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
  </properties>

  <repositories>
    <repository>
      <id>aerius-nexus-public</id>
      <name>AERIUS Nexus repository</name>
      <url>https://nexus.aerius.nl/repository/maven-public/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>com.intuit.karate</groupId>
      <artifactId>karate-core</artifactId>
      <version>${karate.intuit.version}</version>
    </dependency>
    <dependency>
      <groupId>com.intuit.karate</groupId>
      <artifactId>karate-apache</artifactId>
      <version>${karate.intuit.version}</version>
    </dependency>
    <dependency>
      <groupId>com.intuit.karate</groupId>
      <artifactId>karate-junit5</artifactId>
      <version>${karate.intuit.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>kernel</artifactId>
      <version>${itext.version}</version>
    </dependency>
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>io</artifactId>
      <version>${itext.version}</version>
    </dependency>
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>layout</artifactId>
      <version>${itext.version}</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.7.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
      </plugin>

      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless.version}</version>
        <configuration>
          <formats>
            <format>
              <includes>
                <include>pom.xml</include>
              </includes>
              <licenseHeader>
                <file>pom-xml-header.txt</file>
                <delimiter>&lt;project</delimiter>
              </licenseHeader>
              <trimTrailingWhitespace />
              <endWithNewline />
              <eclipseWtp>
                <type>XML</type>
                <files>
                  <file>pom-xml.prefs</file>
                </files>
              </eclipseWtp>
            </format>
          </formats>
          <java>
            <includes>
              <include>src/*/java/nl/aerius/**/*.java</include>
            </includes>
            <licenseHeader>
              <file>checkstyle-header.txt</file>
            </licenseHeader>
            <eclipse>
              <file>eclipse_code_formatter_profile.xml</file>
            </eclipse>
            <importOrder>
              <file>eclipse.importorder</file>
            </importOrder>
          </java>
        </configuration>

        <dependencies>
          <dependency>
            <groupId>nl.aerius</groupId>
            <artifactId>tools</artifactId>
            <version>${aerius-tools.version}</version>
          </dependency>
        </dependencies>
      </plugin>

      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>3.0</version>
        <configuration>
          <header>license-header.txt</header>

          <mapping>
            <java>SLASHSTAR_STYLE</java>
          </mapping>

          <includes>
            <include>**/*.java</include>
            <include>**/pom.xml</include>
          </includes>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>nl.aerius</groupId>
            <artifactId>tools</artifactId>
            <version>${aerius-tools.version}</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>sonar</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>${jacoco.version}</version>
            <executions>
              <execution>
                <id>prepare-agent</id>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
              </execution>
              <execution>
                <id>report</id>
                <goals>
                  <goal>report</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
